--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img src="./images/header.png" class="banner">
     <main class="body">
       <section id="categories" class="categories">
-          <h1 id="titulo" class="title"> Programação e Web Development </h1>
+          <h1 id="titulo" class="title"> Programação e Desenvolvimento Web </h1>
           <h2 class="subtitle"> Categorias da Página</h2>
           <div class="category" id="curriculumBub">
             <img src="./images/starIcon.png" alt="Curriculum">
@@ -201,7 +201,7 @@
           <ul>
             <li> <h2>Coding website accounts</h2> </li>
             <li> <a href="https://github.com/Ferkze/"> <img src="./images/media/github.png" class="li-icon3"> <b>GitHub Repository: </b> Ferkze </a> </li>
-            <li> <a href="https://stackoverflow.com/users/9870486/ferkze"><img src="./images/media/stackoverflow.jpg" class="li-icon3"> <b> Stack Overflow: </b> Ferkze </a> </li>
+            <li> <a href="https://stackoverflow.com/users/9870486/ferkze"><img src="./images/media/stackoverFlow.jpg" class="li-icon3"> <b> Stack Overflow: </b> Ferkze </a> </li>
           </ul>
         </main>
       </section>
