--- a/index.html
+++ b/index.html
@@ -15,36 +15,36 @@
         <a href="#contato" class="bar-item"> Contato </a>
       </div>
     </nav>
-    <img src="./images/header.png" class="banner">
+    <div class="banner"></div>
     <main class="body">
       <section id="categories" class="categories">
-          <h1 id="titulo" class="title"> Programação e Desenvolvimento Web </h1>
+          <h1 id="titulo" class="title"> Programação e Web Development </h1>
           <h2 class="subtitle"> Categorias da Página</h2>
           <div class="category" id="curriculumBub">
             <img src="./images/starIcon.png" alt="Curriculum">
             <div class="description">
-              <h1><a href="curriculum"> Currículo </a></h1>
+              <h1><a href="#curriculum"> Currículo </a></h1>
               <p> Diplomas, escolaridade, experiência de trabalho, principais habilidades e línguas estrangeiras</p>
             </div>
           </div>
           <div class="category" id="portifolioBub">
             <img src="./images/timeIcon.png" alt="Portifolio">
             <div class="description">
-              <h1><a href="portifolio"> Portifólio </a></h1>
+              <h1><a href="#portifolio"> Portifólio </a></h1>
               <p>Em desenvolvimento.</p>
             </div>
           </div>
           <div class="category" id="aboutmeBub">
             <img src="./images/timeIcon.png" alt="About Me">
             <div class="description">
-              <h1><a href="aboutme"> Sobre Mim </a></h1>
+              <h1><a href="#aboutme"> Sobre Mim </a></h1>
               <p>Em desenvolvimento.</p>
             </div>
           </div>
           <div class="category" id="contactBub">
             <img src="./images/talkIcon.png" alt="Contact">
             <div class="description">
-              <h1><a href="contact"> Contato </a></h1>
+              <h1><a href="#contact"> Contato </a></h1>
               <p>E-mail de contato, telefone, celular, redes sociais e games.</p>
             </div>
           </div>
@@ -124,7 +124,7 @@
               </li>
               <li><span> <img class="li-icon" src="./images/flags/china.png">中文【汉语】
                 <div class="bottle">
-                  <div class="liquid" style="width:45%;background-color:yellow;color:black;"> 45%
+                  <div class="liquid" style="width:45%;"> 45%
                   </div>
                 </div>
                 <span class="hide"> Autodidata desde Novembro de 2017 - Intermediário </span>
@@ -165,12 +165,8 @@
               <p> <b>Obs: </b> 4 anos de espanhól no Fundamental II</p>
             </div>
             <hr>
-            <h2>Experiência de Trabalho</h2>
-            <div class="level">
-              <p>No momento não tenho experiência de trabalho na área de Desenvolvimento/ TI,
-              porém, já trabalhei nas empresas dos meus pais, exercendo funções auxiliares administrativas gerais,
-              que pôde me dar noções de fluxo de caixa, cálculo de folha de pagamento, recrutamento,
-              marketing, etc.</p>
+            <h2>Sem Experiência de Trabalho</h2>
+            </p>
             </div>
           </article>
       </section>
@@ -201,15 +197,15 @@
           <ul>
             <li> <h2>Coding website accounts</h2> </li>
             <li> <a href="https://github.com/Ferkze/"> <img src="./images/media/github.png" class="li-icon3"> <b>GitHub Repository: </b> Ferkze </a> </li>
-            <li> <a href="https://stackoverflow.com/users/9870486/ferkze"><img src="./images/media/stackoverFlow.jpg" class="li-icon3"> <b> Stack Overflow: </b> Ferkze </a> </li>
+            <li> <a href="https://stackoverflow.com/users/9870486/ferkze"><img src="./images/media/stackoverflow.jpg" class="li-icon3"> <b> Stack Overflow: </b> Ferkze </a> </li>
           </ul>
         </main>
       </section>
     </main>
-    <footer>
+    <!-- <footer>
       <h3>Obrigado pela visita</h3>
       <h3>Volte mais vezes para não perder as novas categorias e funcionalidades do site</h3>
       <h3>Se você está vendo pelo celular... Paciência! Ainda estou estudando para criar designs responsivos e elegantes</h3>
-    </footer>
+    </footer> -->
   </body>
 </html>
