Minor details && skills update

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Ferkze Fabio</title>
+    <title>FERKZE Fabio</title>
     <link rel="stylesheet" type="text/css" href="home.css">
+    <link rel="icon" href="./images/langs/codeIcon1.png">
   </head>
   <body>
     <nav class="topnav">
@@ -18,13 +19,20 @@
     <div class="banner"></div>
     <main class="body">
       <section id="categories" class="categories">
-          <h1 id="titulo" class="title"> Programação e Web Development </h1>
+          <h1 id="titulo" class="title"> Programação para Internet e Mobile </h1>
           <h2 class="subtitle"> Categorias da Página</h2>
           <div class="category" id="curriculumBub">
             <img src="./images/starIcon.png" alt="Curriculum">
             <div class="description">
               <h1><a href="#curriculum"> Currículo </a></h1>
               <p> Diplomas, escolaridade, experiência de trabalho, principais habilidades e línguas estrangeiras</p>
+            </div>
+          </div>
+          <div class="category" id="contactBub">
+            <img src="./images/talkIcon.png" alt="Contact">
+            <div class="description">
+              <h1><a href="#contact"> Contato </a></h1>
+              <p>E-mail de contato, telefone, celular, redes sociais e games.</p>
             </div>
           </div>
           <div class="category" id="portifolioBub">
@@ -41,61 +49,61 @@
               <p>Em desenvolvimento.</p>
             </div>
           </div>
-          <div class="category" id="contactBub">
-            <img src="./images/talkIcon.png" alt="Contact">
-            <div class="description">
-              <h1><a href="#contact"> Contato </a></h1>
-              <p>E-mail de contato, telefone, celular, redes sociais e games.</p>
-            </div>
-          </div>
         </section>
       <section class="curriculum">
           <h1 id="curriculo" class="title">Meu Currículo</h1>
           <article class="personal">
             <img src="./images/meIcon.png" alt="">
-            <h2>Dados Pessoais</h2>
+            <h2>Quem sou eu?</h2>
             <ul>
-              <li>Fabio Gonçalves Martins <span class="obs"> "Ferkze"</span> </li>
-              <li>18 anos - 16 / 06 / 2000</li>
-              <li>São Bernardo do Campo, SP - Brasil</li>
-              <li>Brasileiro - Solteiro</li>
-              <li>Estudante de Programação e Desenvolvimento Web </li>
+              <li style="list-style: none;">Fabio Gonçalves Martins <span class="obs"> "Ferkze"</span> </li>
+              <li style="list-style: none;">18 anos <span class="obs">, só isso?</span></li>
+              <li style="list-style: none;">Moro em São Paulo, Brasil</li>
+              <li style="list-style: none;">Autodidata em Desenvolvimento de Aplicações Web e Mobile </li>
             </ul>
           </article>
           <div class="skills">
             <h2>Principais Habilidades</h2>
-            <h2>Informática</h2>
+            <h2>Tecnologia da Informação</h2>
             <span class="obs"> Passe o mouse no item para mais detalhes</span>
             <ul>
-              <li><img class="li-icon2" src="./images/langs/frontendIcon.jpg">Front-end (HTML5, CSS3, JS)
+              <li><img class="li-icon2" src="./images/langs/frontendIcon.jpg">Front-end<span class="obs">[HTML5, CSS3, JS]</span>
                 <div class="bottle">
-                  <div class="liquid" style="width:90%;"> 90% </div>
+                  <div class="liquid" style="width:100%;"> 100% </div>
                 </div>
-                <span class="hide"> Noções Avançadas na criação de sites</span>
+                <span class="hide">Fundamentos dominados na client-side</span>
               </li>
-              <li><img class="li-icon2" src="./images/langs/vue.png">Vue.js (Javascript Framework)
+              <li><img class="li-icon2" src="./images/langs/vue.png">Vue.js<span class="obs">Front-end Framework</span>
                 <div class="bottle">
-                  <div class="liquid" style="width: 70%;"> 70% </div>
+                  <div class="liquid" style="width: 80%;"> 80% </div>
                 </div>
-                <span class="hide"> Web Framework que mais domino </span>
+                <span class="hide"> Web Framework mais poderoso do século XXI </span>
               </li>
-              <li><img class="li-icon2" src="./images/langs/365.jpg">Pacote Office
+              <li><img class="li-icon2" src="./images/langs/node.png">Node.js<span class="obs">Server-side</span>
+                <div class="bottle">
+                  <div class="liquid" style="width:75%;"> 75% </div>
+                </div>
+                <span class="hide"> Back-end usando<span class="obs">Express.js</span> </span>
+              </li>
+              <li><img class="li-icon2" src="./images/langs/android.png">Android 
+                <span class="obs">[<img class="li-icon" src="./images/langs/kotlin.png">Kotlin,
+                <img class="li-icon" src="./images/langs/java.png">Java]</span>
+                <div class="bottle">
+                  <div class="liquid" style="width:70%;"> 70% </div>
+                </div>
+                <span class="hide"> Desenvolvimento na Plataforma Android Nativa</span>
+              </li>
+              <li><img class="li-icon2" src="./images/langs/pythonIcon.jpg">Python<span class="obs">[Numpy, Matplotlib, Tensorflow]</span>
+                <div class="bottle">
+                  <div class="liquid" style="color:black;background-color:rgb(157, 236, 9);width:65%;"> 65% </div>
+                </div>
+                <span class="hide"> Ciência de Dados Básica e Machine Learning </span>
+              </li>
+              <li><img class="li-icon2" src="./images/langs/365.jpg">Pacote Office<span class="obs">por que não?</span>
                 <div class="bottle">
                   <div class="liquid" style="width:90%;"> 90% </div>
                 </div>
                 <span class="hide"> Proficiente em Word, Excel, Power Point </span>
-              </li>
-              <li><img class="li-icon2" src="./images/langs/pythonIcon.jpg">Python
-                <div class="bottle">
-                  <div class="liquid" style="width:75%;"> 75% </div>
-                </div>
-                <span class="hide"> Ciência de Dados e Machine Learning </span>
-              </li>
-              <li><img class="li-icon2" src="./images/langs/java.png">Java
-                <div class="bottle">
-                  <div class="liquid" style="width:55%;"> 55% </div>
-                </div>
-                <span class="hide"> Desenvolvimento de Software e JDBC</span>
               </li>
             </ul>
             <hr>
@@ -108,33 +116,33 @@
                 </div>
                 <span class="hide"> Língua Nativa </span>
               </li>
-              <li><span> <img class="li-icon" src="./images/flags/uk.jpg">English
+              <li><span> <img class="li-icon" src="./images/flags/uk.jpg">Inglês
                 <div class="bottle">
                   <div class="liquid" style="width:100%"> 100%
                   </div>
                 </div>
                 <span class="hide"> Proficiente com Certificado da Cambridge University </span>
               </li>
-              <li><span> <img class="li-icon" src="./images/flags/spain.jpg">Español
+              <li><span> <img class="li-icon" src="./images/flags/spain.jpg">Espanhól
                 <div class="bottle">
-                  <div class="liquid" style="width:70%;"> 70%
+                  <div class="liquid" style="width:80%;"> 80%
                   </div>
                 </div>
                 <span class="hide"> Formação acadêmica e viagens na América do Sul </span>
               </li>
-              <li><span> <img class="li-icon" src="./images/flags/china.png">中文【汉语】
+              <li><span> <img class="li-icon" src="./images/flags/china.png">Chinês (Mandarim)
                 <div class="bottle">
-                  <div class="liquid" style="width:45%;"> 45%
+                  <div class="liquid" style="color:black;background-color:rgb(157, 236, 9);width:55%;"> 55%
                   </div>
                 </div>
-                <span class="hide"> Autodidata desde Novembro de 2017 - Intermediário </span>
+                <span class="hide"> Autodidata e Matriculado no Instituto Confúcio </span>
               </li>
-              <li><span><img class="li-icon" src="./images/flags/russia.jpg"></span>русский
+              <li><span><img class="li-icon" src="./images/flags/russia.jpg"></span>Russo
                 <div class="bottle">
-                  <div class="liquid" style="width:30%;background-color:yellow;color:black;"> 30%
+                  <div class="liquid" style="width:30%;background-color:rgb(236, 232, 9);color:black;"> 30%
                   </div>
                 </div>
-                <span class="hide"> Autodidata por 6 meses e experiência comunicando com nativos </span>
+                <span class="hide"> Razoável vocabulário e domínio do alfabeto cirílico </span>
               </li>
             </ul>
           </div>
@@ -146,7 +154,8 @@
               <p> <b>Curso:</b> Tecnologia em Informática para Negócios </p>
               <p> <b>Duração: </b> 3 anos (6 semestres)</p>
               <p> <b>Período: </b> Noturno</p>
-              <p> <b>Situação: </b> Cursando - 2o Semestre</p>
+              <p> <b>Situação: </b> Cursando - 3º Semestre</p>
+              <p> <b>Final Planejado: </b> 2º Semestre/ 2020</p>
             </div>
             <hr>
             <div class="level">
@@ -156,7 +165,6 @@
               <p> <b>Duração: </b> 3 anos</p>
               <p> <b>Período: </b> Integral</p>
               <p> <b>Situação: </b> Concluído em Dezembro de 2017</p>
-
             </div>
             <hr>
             <div class="level">
@@ -165,7 +173,7 @@
               <p> <b>Obs: </b> 4 anos de espanhól no Fundamental II</p>
             </div>
             <hr>
-            <h2>Sem Experiência de Trabalho</h2>
+            <h2>Experiência de Trabalho <span class="obs">Coming soon</span></h2>
             </p>
             </div>
           </article>
@@ -189,13 +197,13 @@
           </ul>
           <ul>
             <li><h2>Redes Sociais</h2></li>
-            <li> <a href="http://instagram.com/fabio_fkz"> <img class="li-icon3" src="./images/media/insta.jpg"> <b>Instagram: </b> fabio_fkz </a> </li>
+            <li> <a href="http://instagram.com/ferkze"> <img class="li-icon3" src="./images/media/insta.jpg"> <b>Instagram: </b> ferkze </a> </li>
             <li> <img class="li-icon3" src="./images/media/facebookdark.jpg"> <b>Facebook: </b> N/A </li>
             <li> <img class="li-icon3" src="./images/media/twitterdark.jpg"> <b>Twitter: </b> N/A </li>
             <li> <img class="li-icon3" src="./images/media/youtubedark.jpg"> <b>Youtube: </b> N/A </li>
           </ul>
           <ul>
-            <li> <h2>Coding website accounts</h2> </li>
+            <li> <h2>Comunidade</h2> </li>
             <li> <a href="https://github.com/Ferkze/"> <img src="./images/media/github.png" class="li-icon3"> <b>GitHub Repository: </b> Ferkze </a> </li>
             <li> <a href="https://stackoverflow.com/users/9870486/ferkze"><img src="./images/media/stackoverflow.jpg" class="li-icon3"> <b> Stack Overflow: </b> Ferkze </a> </li>
           </ul>
