Atualização de informações básicas

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
   <head>
     <meta charset="utf-8">
     <title>FERKZE Fabio</title>
@@ -11,7 +11,7 @@
       <a href="#titulo" class="bar-item"> <b>FERKZE</b> Fabio </a>
       <div class="items-right">
         <a href="#curriculo" class="bar-item"> Currículo </a>
-        <a href="#titulo" class="bar-item"> Portifólio </a>
+        <a href="#titulo" class="bar-item"> Portfolio </a>
         <a href="#titulo" class="bar-item"> Sobre Mim </a>
         <a href="#contato" class="bar-item"> Contato </a>
       </div>
@@ -19,26 +19,26 @@
     <div class="banner"></div>
     <main class="body">
       <section id="categories" class="categories">
-          <h1 id="titulo" class="title"> Programação para Internet e Mobile </h1>
+          <h1 id="titulo" class="title"> Desenvolvedor Full-Stack </h1>
           <h2 class="subtitle"> Categorias da Página</h2>
           <div class="category" id="curriculumBub">
             <img src="./images/starIcon.png" alt="Curriculum">
             <div class="description">
               <h1><a href="#curriculum"> Currículo </a></h1>
-              <p> Diplomas, escolaridade, experiência de trabalho, principais habilidades e línguas estrangeiras</p>
+              <p> Diplomas, escolaridade, experiências, principais habilidades</p>
             </div>
           </div>
           <div class="category" id="contactBub">
             <img src="./images/talkIcon.png" alt="Contact">
             <div class="description">
               <h1><a href="#contact"> Contato </a></h1>
-              <p>E-mail de contato, telefone, celular, redes sociais e games.</p>
+              <p>Email, telefone, redes sociais e games.</p>
             </div>
           </div>
           <div class="category" id="portifolioBub">
             <img src="./images/timeIcon.png" alt="Portifolio">
             <div class="description">
-              <h1><a href="#portifolio"> Portifólio </a></h1>
+              <h1><a href="#portifolio"> Portfolio </a></h1>
               <p>Em desenvolvimento.</p>
             </div>
           </div>
@@ -49,100 +49,76 @@
               <p>Em desenvolvimento.</p>
             </div>
           </div>
-        </section>
+      </section>
       <section class="curriculum">
           <h1 id="curriculo" class="title">Meu Currículo</h1>
           <article class="personal">
-            <img src="./images/meIcon.png" alt="">
+            <img src="./images/meIcon.png" alt="Fabio">
             <h2>Quem sou eu?</h2>
             <ul>
-              <li style="list-style: none;">Fabio Gonçalves Martins <span class="obs"> "Ferkze"</span> </li>
-              <li style="list-style: none;">18 anos <span class="obs">, só isso?</span></li>
+              <li style="list-style: none;">Fabio Gonçalves Martins</li>
+              <li style="list-style: none;">19 anos</li>
               <li style="list-style: none;">Moro em São Paulo, Brasil</li>
-              <li style="list-style: none;">Autodidata em Desenvolvimento de Aplicações Web e Mobile </li>
+              <li style="list-style: none;">Desenvolvedor de Aplicações Web e Mobile desde 2017</li>
             </ul>
           </article>
           <div class="skills">
             <h2>Principais Habilidades</h2>
-            <h2>Tecnologia da Informação</h2>
-            <span class="obs"> Passe o mouse no item para mais detalhes</span>
+            <h2>Tecnologias</h2>
             <ul>
-              <li><img class="li-icon2" src="./images/langs/frontendIcon.jpg">Front-end<span class="obs">[HTML5, CSS3, JS]</span>
-                <div class="bottle">
-                  <div class="liquid" style="width:100%;"> 100% </div>
-                </div>
-                <span class="hide">Fundamentos dominados na client-side</span>
+              <li>
+                <img class="li-icon2" src="./images/langs/frontendIcon.jpg">
+                <span>Front-end</span>
+                <span class="obs">HTML5, CSS3, JS]</span>
               </li>
-              <li><img class="li-icon2" src="./images/langs/vue.png">Vue.js<span class="obs">Front-end Framework</span>
-                <div class="bottle">
-                  <div class="liquid" style="width: 80%;"> 80% </div>
-                </div>
-                <span class="hide"> Web Framework mais poderoso do século XXI </span>
+              <li>
+                <img class="li-icon2" src="./images/langs/vue.png">
+                <span>Vue.js</span>
+                <span class="obs">Front-end Framework</span>
               </li>
-              <li><img class="li-icon2" src="./images/langs/node.png">Node.js<span class="obs">Server-side</span>
-                <div class="bottle">
-                  <div class="liquid" style="width:75%;"> 75% </div>
-                </div>
-                <span class="hide"> Back-end usando<span class="obs">Express.js</span> </span>
+              <li>
+                <img class="li-icon2" src="./images/langs/node.png">
+                <span>Node.js</span>
+                <span class="obs">Server-side</span>
               </li>
-              <li><img class="li-icon2" src="./images/langs/android.png">Android 
+              <li>
+                <img class="li-icon2" src="./images/langs/android.png">
+                <span>Android</span> 
                 <span class="obs">[<img class="li-icon" src="./images/langs/kotlin.png">Kotlin,
                 <img class="li-icon" src="./images/langs/java.png">Java]</span>
-                <div class="bottle">
-                  <div class="liquid" style="width:70%;"> 70% </div>
-                </div>
-                <span class="hide"> Desenvolvimento na Plataforma Android Nativa</span>
               </li>
-              <li><img class="li-icon2" src="./images/langs/pythonIcon.jpg">Python<span class="obs">[Numpy, Matplotlib, Tensorflow]</span>
-                <div class="bottle">
-                  <div class="liquid" style="color:black;background-color:rgb(157, 236, 9);width:65%;"> 65% </div>
-                </div>
-                <span class="hide"> Ciência de Dados Básica e Machine Learning </span>
+              <li>
+                <img class="li-icon2" src="./images/langs/pythonIcon.jpg">
+                <span>Python</span>
+                <span class="obs">[Numpy, Matplotlib, Tensorflow]</span>
               </li>
-              <li><img class="li-icon2" src="./images/langs/365.jpg">Pacote Office<span class="obs">por que não?</span>
-                <div class="bottle">
-                  <div class="liquid" style="width:90%;"> 90% </div>
-                </div>
-                <span class="hide"> Proficiente em Word, Excel, Power Point </span>
+              <li>
+                <img class="li-icon2" src="./images/langs/365.jpg">
+                <span>Office</span>
               </li>
             </ul>
             <hr>
             <h2>Idiomas</h2>
             <ul>
-              <li><span> <img class="li-icon" src="./images/flags/brazil.jpg">Português
-                <div class="bottle">
-                  <div class="liquid" style="width:100%"> 100%
-                  </div>
-                </div>
-                <span class="hide"> Língua Nativa </span>
+              <li>
+                <img class="li-icon" src="./images/flags/brazil.jpg">
+                <span>Português</span>
               </li>
-              <li><span> <img class="li-icon" src="./images/flags/uk.jpg">Inglês
-                <div class="bottle">
-                  <div class="liquid" style="width:100%"> 100%
-                  </div>
-                </div>
-                <span class="hide"> Proficiente com Certificado da Cambridge University </span>
+              <li>
+                <img class="li-icon" src="./images/flags/uk.jpg">
+                <span>Inglês</span>
               </li>
-              <li><span> <img class="li-icon" src="./images/flags/spain.jpg">Espanhól
-                <div class="bottle">
-                  <div class="liquid" style="width:80%;"> 80%
-                  </div>
-                </div>
-                <span class="hide"> Formação acadêmica e viagens na América do Sul </span>
+              <li>
+                <img class="li-icon" src="./images/flags/spain.jpg">
+                <span>Espanhól</span>
               </li>
-              <li><span> <img class="li-icon" src="./images/flags/china.png">Chinês (Mandarim)
-                <div class="bottle">
-                  <div class="liquid" style="color:black;background-color:rgb(157, 236, 9);width:55%;"> 55%
-                  </div>
-                </div>
-                <span class="hide"> Autodidata e Matriculado no Instituto Confúcio </span>
+              <li>
+                <img class="li-icon" src="./images/flags/china.png">
+                <span>Chinês (Mandarim)</span>
               </li>
-              <li><span><img class="li-icon" src="./images/flags/russia.jpg"></span>Russo
-                <div class="bottle">
-                  <div class="liquid" style="width:30%;background-color:rgb(236, 232, 9);color:black;"> 30%
-                  </div>
-                </div>
-                <span class="hide"> Razoável vocabulário e domínio do alfabeto cirílico </span>
+              <li>
+                <img class="li-icon" src="./images/flags/russia.jpg">
+                <span>Russo</span>
               </li>
             </ul>
           </div>
@@ -152,25 +128,14 @@
               <h3>Ensino Superior</h3>
               <h4><a href="http://fatecsbc.edu.br">FATEC "Adib Moisés Dib" - São Bernardo do Campo</a></h4>
               <p> <b>Curso:</b> Tecnologia em Informática para Negócios </p>
-              <p> <b>Duração: </b> 3 anos (6 semestres)</p>
-              <p> <b>Período: </b> Noturno</p>
-              <p> <b>Situação: </b> Cursando - 3º Semestre</p>
-              <p> <b>Final Planejado: </b> 2º Semestre/ 2020</p>
+              <p> <b>Situação: </b> Cursando - 5º Semestre</p>
+              <p> <b>Final Planejado: </b> Novembro de 2020</p>
             </div>
             <hr>
             <div class="level">
-              <h3>Ensino Médio Integrado ao Técnico</h3>
+              <h3>Ensino Médio Integrado ao Técnico em Administração</h3>
               <h4> <a href="http://www.etelg.com.br/">ETEC "Lauro Gomes"</a> </h4>
-              <p> <b>Curso Técnico: </b> Administração</p>
-              <p> <b>Duração: </b> 3 anos</p>
-              <p> <b>Período: </b> Integral</p>
-              <p> <b>Situação: </b> Concluído em Dezembro de 2017</p>
-            </div>
-            <hr>
-            <div class="level">
-              <h3>Ensino Fundamental I - II</h3>
-              <h4> <a href="https://www.colegioelshaday.com.br/">Colégio El-Shaday</a> </h4>
-              <p> <b>Obs: </b> 4 anos de espanhól no Fundamental II</p>
+              <p>  Concluído em Dezembro de 2017</p>
             </div>
             <hr>
             <h2>Experiência de Trabalho <span class="obs">Coming soon</span></h2>
@@ -179,9 +144,8 @@
           </article>
       </section>
       <section class="portifolio">
-          <h1 id="portifolio" class="title">Portifólio - Em desenvolvimento</h1>
-
-        </section>
+        <h1 id="portifolio" class="title">Portfolio - Em desenvolvimento</h1>
+      </section>
       <section>
         <h1 id="sobremim" class="title">Sobre Mim - em desenvolvimento</h1>
       </section>
@@ -190,10 +154,9 @@
         <main>
           <ul>
             <li> <h2>E-mail e Telefone</h2> </li>
-            <li> <img class="li-icon3" src="./images/media/gmail.jpg"> <b>E-mail: </b> ferkemartins@gmail.com </li>
+            <li> <img class="li-icon3" src="./images/media/gmail.jpg"> <b>E-mail: </b> ferkze@gmail.com </li>
             <li> <img class="li-icon3" src="./images/media/whatsapp.png"> <b>Whatsapp: </b> (11) 97757-0217</li>
             <li> <img class="li-icon3" src="./images/media/mobile.jpg"> <b>Celular: </b> +5511977570217</li>
-            <li> <img class="li-icon3" src="./images/media/telephone.jpg"> <b>Tel. Fixo: </b> (11) 4317-7338</li>
           </ul>
           <ul>
             <li><h2>Redes Sociais</h2></li>
